--- a/swift-design-patterns/Presentation/Storyboards/Movies.storyboard
+++ b/swift-design-patterns/Presentation/Storyboards/Movies.storyboard
@@ -39,6 +39,21 @@
             </objects>
             <point key="canvasLocation" x="287" y="-60"/>
         </scene>
+        <!--Movies Rx View Controller-->
+        <scene sceneID="KPD-zu-oK0">
+            <objects>
+                <viewController storyboardIdentifier="MoviesViewControllerRx" id="xDY-Lg-gkd" customClass="MoviesRxViewController" customModule="swift_design_patterns" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OKb-4W-vrV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Elr-34-h4P"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tEG-87-v08" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1095.6521739130435" y="-60.267857142857139"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
