--- a/swift-design-patterns/Presentation/Xibs/MovieCell.xib
+++ b/swift-design-patterns/Presentation/Xibs/MovieCell.xib
@@ -11,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MovieCell" customModule="swift_design_patterns" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="380" height="439"/>
+            <rect key="frame" x="0.0" y="0.0" width="253" height="341"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="380" height="439"/>
+                <rect key="frame" x="0.0" y="0.0" width="253" height="341"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EiE-ts-f2B" userLabel="poster">
-                        <rect key="frame" x="0.0" y="0.0" width="380" height="439"/>
+                        <rect key="frame" x="0.0" y="0.0" width="253" height="341"/>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dt1-Uc-kPK">
-                        <rect key="frame" x="0.0" y="0.0" width="380" height="439"/>
+                        <rect key="frame" x="0.0" y="0.0" width="253" height="341"/>
                     </imageView>
                 </subviews>
             </view>
@@ -36,11 +36,11 @@
                 <constraint firstItem="Dt1-Uc-kPK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Vvu-o1-ZHD"/>
                 <constraint firstAttribute="trailing" secondItem="EiE-ts-f2B" secondAttribute="trailing" id="hTm-E3-pry"/>
             </constraints>
-            <size key="customSize" width="380" height="439"/>
+            <size key="customSize" width="253" height="341"/>
             <connections>
                 <outlet property="posterImageView" destination="EiE-ts-f2B" id="er7-TR-NJh"/>
             </connections>
-            <point key="canvasLocation" x="181.15942028985509" y="106.13839285714285"/>
+            <point key="canvasLocation" x="89.130434782608702" y="72.65625"/>
         </collectionViewCell>
     </objects>
 </document>
